JEDIT 4.2 VERSION HISTORY

{{{ Version 4.2pre10

{{{ Miscellaneous

- Added "Create Constructor" macro, updated "Make Get and Set Methods"
  and "Get Class Name" macros (Thomas Galvin).

}}}
{{{ Bug Fixes

- Fixed another NullPointerException in the file system browser when
  using VFS's that do not set the VFS.DirectoryEntry.symlinkPath field.

- Actually fix the MacOS plugin for the latest MRJ update.

- Fix status bar problem with GTK look and feel if memory indicator is
  enabled.

}}}

}}}

{{{ Version 4.2pre9

Thanks to Brad Mace, David Hardin,  Matthew J. Price, Ollie Rutherfurd,
Patrick Tingen, Thomas Galvin and Wiktor Adamski for contributing to
this release.

{{{ Miscellaneous

- Includes new "Create Get/Set Methods" macro (Thomas Galvin).

- Minor improvements to "Deep Indent" feature (Brad Mace).

- "Reload All Buffers" command now only asks for confirmation if there
  are buffers with unsaved changes (Ollie Rutherfurd).

}}}
{{{ Syntax Highlighting

- Updated Visual FoxPro syntax highlighting (Matthew J. Price).

- Updated Lisp syntax highlighting (David Hardin).

- Updated Progress syntax highlighting (Patrick Tingen)

}}}
{{{ Bug Fixes

- Horizontal scroll bar was not updated sometimes.

- The code that determines if a selection is being dragged is now much
  more accurate; for example, with rectangular selections is only
  registers a drag if the mouse is actually within the rectangular
  region, not just between the start and end locations in the buffer.

- jEdit did not compile with Java 1.3.

- Clicking "Select All" in the "Files Changed on Disk" dialog box did
  not enable the Reload button (Ollie Rutherfurd).

- startup.bsh file was not included in installer bundle.

- Fixed a performance problem with rollover buttons.

- Pressing a shortcut that reads the next character from the keyboard
  while a control other than the text area is focused will now shift
  focus to the text area, and back again to the original control when