@@ -976,6 +976,7 @@ about.text=jEdit is brought to you by\n\
 	Todd Papaioannou\n\
 	Tom Copeland\n\
 	Tom Locke\n\
+	Trevor Harmon\n\
 	Vicente Salvador\n\
 	Vinod Kiran\n\
 	Will Sargent\n\
